[build-system]
# Definiert, dass Setuptools zum Bauen benötigt wird
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Core-Metadaten aus deiner setup.py
name = "IOPaint"
version = "1.6.0"
authors = [
  { name="PanicByte", email="cwq1913@gmail.com" },
]
description = "Image inpainting, outpainting tool powered by SOTA AI Model"
readme = "README.md"  # Ersetzt long_description und content_type
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Abhängigkeiten aus deiner requirements.txt
dependencies = [
    "torch>=2.0.0",
    "opencv-python",
    "diffusers==0.27.2",
    "huggingface_hub==0.25.2",
    "accelerate",
    "peft==0.7.1",
    "transformers>=4.39.1",
    "safetensors",
    "controlnet-aux==0.0.3",
    "fastapi==0.108.0",
    "uvicorn",
    "python-multipart",
    "python-socketio==5.7.2",
    "typer",
    "pydantic>=2.5.2",
    "rich",
    "loguru",
    "yacs",
    "piexif==1.1.3",
    "omegaconf",
    "easydict",
    "gradio==4.21.0",
    "typer-config==1.4.0",
    "Pillow==9.5.0",
]

[project.urls]
# Ersetzt das 'url' Argument
Repository = "https://github.com/Billamw/IOPaint_BA"

[project.scripts]
# Ersetzt 'entry_points'
iopaint = "iopaint:entry_point"

[tool.setuptools.packages.find]
# Ersetzt 'setuptools.find_packages(".")'
where = ["."]

[tool.setuptools.package-data]
# Ersetzt die dynamische 'package_data' Logik